--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,23 @@
-[tool.poetry]
+[project]
 name = "crypto-bot"
 version = "0.1.0"
-description = ""
+description = "Add your description here"
 readme = "README.md"
-package-mode = false
+requires-python = ">=3.12"
+dependencies = [
+    "aiohttp[speedups]>=3.11.2",
+    "asyncpg>=0.30.0",
+    "msgspec[yaml]>=0.18.6",
+    "python-dotenv>=1.0.1",
+    "sqlalchemy[asyncio]>=2.0.36",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-aiohttp = {extras = ["speedups"], version = "^3.10.10"}
-msgspec = {extras = ["yaml"], version = "^0.18.6"}
-python-dotenv = "^1.0.1"
-sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
-asyncpg = "^0.30.0"
+[dependency-groups]
+dev = [
+    "mypy>=1.13.0",
+    "ruff>=0.7.4",
+]
 
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.7.2"
-mypy = "^1.13.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 target-version = "py312"
