--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "aiohttp[speedups]>=3.11.2",
-    "asyncpg>=0.30.0",
-    "msgspec[yaml]>=0.18.6",
+    "aiohttp[speedups]>=3.11.14",
+    "msgpack>=1.1.0",
+    "msgspec[yaml]>=0.19.0",
     "python-dotenv>=1.0.1",
-    "sqlalchemy[asyncio]>=2.0.36",
 ]
 
 [dependency-groups]
 dev = [
-    "mypy>=1.13.0",
-    "ruff>=0.7.4",
+    "mypy>=1.15.0",
+    "ruff>=0.11.0",
 ]
 
 
