--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiohttp[speedups]>=3.11.14",
+    "asyncpg>=0.30.0",
     "msgpack>=1.1.0",
     "msgspec[yaml]>=0.19.0",
     "python-dotenv>=1.0.1",
