--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp[speedups]>=3.11.14",
     "asyncpg>=0.30.0",
+    "click>=8.1.8",
     "msgpack>=1.1.0",
     "msgspec[yaml]>=0.19.0",
     "python-dotenv>=1.0.1",
